node fade in animation and spacing fix

--- a/src/style/css/main.css
+++ b/src/style/css/main.css
@@ -20,7 +20,8 @@
   border-radius: 5px;
   padding: 0.75rem;
   text-align: center;
-  font-size: 1.2rem; }
+  font-size: 1.2rem;
+  opacity: 0; }
   .flowchart-choice:hover {
     cursor: pointer;
     background-color: salmon; }
@@ -31,68 +32,68 @@
   height: 100vh;
   position: relative;
   background: #f3a257;
-  background: linear-gradient(180deg, #f3b174 0%, #f3a257 100%); }
+  background: linear-gradient(180deg, #f3a257 0%, #f4a344 100%); }
 
-#flowchart-wrapper .spinner {
-  width: 120px;
-  height: 120px;
-  border: 8px solid whitesmoke;
-  border-top: 8px solid black;
-  border-radius: 50%;
-  animation-name: spin;
-  animation-duration: 1.5s;
-  animation-iteration-count: infinite;
-  animation-timing-function: linear; }
+#flowchart-wrapper {
+  height: 100%; }
+  #flowchart-wrapper .spinner {
+    width: 120px;
+    height: 120px;
+    border: 8px solid whitesmoke;
+    border-top: 8px solid black;
+    border-radius: 50%;
+    animation-name: spin;
+    animation-duration: 1.5s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear; }
 
 @keyframes spin {
   from {
     transform: rotate(0deg); }
   to {
     transform: rotate(360deg); } }
-
-#flowchart-wrapper #flowchart-question-container {
-  padding: 5vh 0; }
-  #flowchart-wrapper #flowchart-question-container #flowchart-question {
-    display: block;
-    text-align: center;
-    font-size: 2rem; }
-
-#flowchart-wrapper #flowchart-choices-container {
-  justify-content: center;
-  align-content: center;
-  height: calc(100vh - 10vh - 2rem - 1.15rem);
-  padding: 1rem 32px; }
-  #flowchart-wrapper #flowchart-choices-container .anime {
-    width: 250px;
-    margin: 0.5rem; }
-    #flowchart-wrapper #flowchart-choices-container .anime .anime-image {
+  #flowchart-wrapper #flowchart-question-container {
+    padding: 5vh 0; }
+    #flowchart-wrapper #flowchart-question-container #flowchart-question {
       display: block;
-      width: 100%;
-      height: 300px;
-      object-fit: cover; }
-    #flowchart-wrapper #flowchart-choices-container .anime .anime-title {
-      font-size: 1rem;
-      margin: 0.5rem auto; }
-
-#flowchart-wrapper #flowchart-back-container {
-  position: fixed;
-  top: 0;
-  left: 0;
-  height: 100%; }
-  #flowchart-wrapper #flowchart-back-container:hover {
-    cursor: pointer; }
-  #flowchart-wrapper #flowchart-back-container #flowchart-back {
-    display: block;
-    position: relative;
-    top: 50%;
-    font-weight: 700; }
-    #flowchart-wrapper #flowchart-back-container #flowchart-back #back:hover {
-      cursor: pointer;
-      color: salmon; }
+      text-align: center;
+      font-size: 2rem; }
+  #flowchart-wrapper #flowchart-choices-container {
+    justify-content: center;
+    align-content: center;
+    height: calc(100vh - 10vh - 2rem - 1.15rem);
+    padding: 1rem 32px; }
+    #flowchart-wrapper #flowchart-choices-container .anime {
+      width: 250px;
+      margin: 0.5rem; }
+      #flowchart-wrapper #flowchart-choices-container .anime .anime-image {
+        display: block;
+        width: 100%;
+        height: 300px;
+        object-fit: cover; }
+      #flowchart-wrapper #flowchart-choices-container .anime .anime-title {
+        font-size: 1rem;
+        margin: 0.5rem auto; }
+  #flowchart-wrapper #flowchart-back-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%; }
+    #flowchart-wrapper #flowchart-back-container:hover {
+      cursor: pointer; }
+    #flowchart-wrapper #flowchart-back-container #flowchart-back {
+      display: block;
+      position: relative;
+      top: 50%;
+      font-weight: 700; }
+      #flowchart-wrapper #flowchart-back-container #flowchart-back #back:hover {
+        cursor: pointer;
+        color: salmon; }
 
 @media only screen and (max-width: 768px) {
   #flowchart-wrapper #flowchart-choices-container {
-    height: 100%; } }
+    height: 100%;
+    min-height: 100vh; } }
 
 @media only screen and (max-width: 430px) {
   #flowchart-wrapper #flowchart-question-container {
@@ -101,3 +102,9 @@
     left: -6px; }
     #flowchart-wrapper #flowchart-back-container #flowchart-back #back {
       padding: 0.5rem 0.25rem; } }
+
+.on {
+  opacity: 1; }
+
+.off {
+  opacity: 0; }
