--- a/src/style/sass/_base.sass
+++ b/src/style/sass/_base.sass
@@ -38,6 +38,7 @@ $tablet-screen: 768px
     padding: 0.75rem
     text-align: center
     font-size: 1.2rem
+    opacity: 0
 
     &:hover
         cursor: pointer
