--- a/src/style/sass/_layout.sass
+++ b/src/style/sass/_layout.sass
@@ -6,5 +6,5 @@
     // background-color: $color-1
     background: rgb(243,162,87)
     // #F3A257 ($color-1)
-    // #f3b174
-    background: linear-gradient(180deg, rgba(243,177,116,1) 0%, rgba(243,162,87,1) 100%)
+    // #f4ab55
+    background: linear-gradient(180deg, rgba(243,162,87,1) 0%, rgba(244,163,68,1) 100%)
