--- a/src/style/sass/_modules.sass
+++ b/src/style/sass/_modules.sass
@@ -1,4 +1,5 @@
 #flowchart-wrapper
+    height: 100%
 
     .spinner
         width: 120px
@@ -89,6 +90,7 @@
 
         #flowchart-choices-container
             height: 100%
+            min-height: 100vh
 
 
 
